 AsimShell.pm              Locally Modified          496 

Directory tools/scripts
 awb-shell                 Locally Modified          496 

Added a 'source <file>' command to awb-shell that executes
each of the awb-shell commands in <file>.

Fixed display of alternatives when doing command completion
on a uniondir-based file.

----------
emer        Date: Thu Apr 12 08:05:37 EDT 2012  CSN: CSN-awb-498
                  Thu Apr 12 12:05:37 UTC 2012


Directory libperl/AsimShell/lib
 AsimShell.pm              Locally Modified          497 

Allow rescursive awb-shell source commands. Note, that shell
escape commands cannot be used in a sourced file.

----------
emer        Date: Thu Apr 12 13:39:53 EDT 2012  CSN: CSN-awb-499
                  Thu Apr 12 17:39:53 UTC 2012


Directory debian
 control                   Locally Modified          498 
 changelog                 Locally Modified          498 
 rules                     Locally Modified          498 

Directory admin/packages
 awb                       Locally Modified          498 

Directory etc
 asim.pack                 Locally Modified          498 

Directory etc/repositories.d
 leap.pack                 Locally Modified          498 

Prepare for v12.04 release.

----------
emer        Date: Tue Apr 24 17:27:41 EDT 2012  CSN: CSN-awb-502
                  Tue Apr 24 21:27:41 UTC 2012


Directory libperl/AsimShell/lib/AsimShell
 Completion.pm             Locally Modified          501 

Directory libperl/AsimShell/lib
 AsimShell.pm              Locally Modified          501 

Tab completion in awb-shell now works for .cfx files.

The awb-shell 'source' command now looks to see if
the input file is executable and if it is invokes
that file (passing in the additional arguments on the
command line) and executes the series of commands 
printed to STDOUT by that executable. Note the arguments
are not treated specially so fancy quoting or substitutions
will probably not work.
